Added minimum php version. Updated dependencies to their latest version. Got rid of deprecation messages.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "PHPClassMapper\\Exceptions\\Types\\": "./src/Exceptions/Types"
         }
     },
+    "require": {
+        "php": ">=8.0"
+    },
     "require-dev": {
         "nunomaduro/phpinsights": "^2.2",
         "phpunit/phpunit": "9.5"
